fix header on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,9 @@ a{color:#3bbdb5}
 .footer .logo img{width:50px}
 .footer .content{padding:2em 0 0}
 }@media (max-width: 480px){.header{height:auto;}
-.header .logo{margin:0;padding:30px 0 30px;text-align:center;}
+.header .logo{float:none;margin:0;padding:30px 0 30px;text-align:center;}
 .header .logo img{height:37px;width:auto}
-.header nav{text-transform:uppercase;}
+.header nav{text-transform:uppercase;clear:both;}
 .header nav ul{float:none;display:block;margin:0;padding:0;list-style:none;white-space:normal;font-size:1.1em;}
 .header nav ul li{display:block;padding:1em 1em;border-top:1px solid #3bbdb5;}
 .header nav ul li a{text-decoration:none}
