--- a/src/css/responsive-min-480px.styl
+++ b/src/css/responsive-min-480px.styl
@@ -5,6 +5,7 @@
   .header
     height auto
     .logo
+      float none
       margin 0
       padding 30px 0 30px
       text-align center
@@ -13,6 +14,7 @@
         width auto
     nav
       text-transform uppercase
+      clear both
       ul
         float none
         display block
